# TuringMachineConverter

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
include/: AbstractMachine.hpp  Converter.hpp  CyclicTagSystem.hpp  Machines.hpp  Manager.hpp  MiniPrograms.hpp  States.hpp  TagSystem.hpp  TagSystemConverter.hpp  TuringMachine.hpp  TuringMachineConverter.hpp  Utils.hpp
lib/: ConvertTM.cc  ConvertTS.cc  ExecuteCTS.cc  ExecuteTM.cc  ExecuteTS.cc
res/: cts.txt  emulation.txt  example_cts.txt  example_ts.txt  machine.txt  tm.txt  tm_dump.txt  ts.txt  ts_dump.txt
